--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,11 @@
+Mon Nov  2 01:57:49 1998  Assar Westerlund  <assar@sics.se>
+
+	* ftp/ftp.c (getreply): remove extra `break'
+
+	* ftp/gssapi.c (gss_auth): fixo typo(copyo?)
+
+	* ftp/security.c (sec_login): fix loop and return value
+
 Tue Sep  1 16:56:42 1998  Johan Danielsson  <joda@emma.pdc.kth.se>
 
 	* ftp/cmds.c (quote1): fix % quoting bug
